---
config:
  theme: forest
---
erDiagram
    APPRENANT {
        string id PK
        string nom
        string prenom
        string email
        string telephone
        string formation_id FK
    }
    ENTREPRISE {
        string id PK
        string nom
        string adresse
        string secteur
        string contact_email
    }
    OFFRE_STAGE {
        string id PK
        string titre
        string description
        date date_debut
        date date_fin
        string competences_requises
        number remuneration
        string entreprise_id FK
    }
    CANDIDATURE {
        string id PK
        date date_soumission
        string statut
        string lettre_motivation
        string apprenant_id FK
        string offre_stage_id FK
    }
    STAGE {
        string id PK
        date date_debut
        date date_fin
        string evaluation_entreprise
        string evaluation_apprenant
        string rapport_url
        string offre_stage_id FK
        string apprenant_id FK
        string tuteur_pedagogique_id FK
        string tuteur_entreprise_id FK
    }
    TUTEUR_PEDAGOGIQUE {
        string id PK
        string nom
        string prenom
        string email
        string specialite
    }
    TUTEUR_ENTREPRISE {
        string id PK
        string nom
        string prenom
        string email
        string fonction
        string entreprise_id FK
    }
    FORMATION {
        string id PK
        string nom
        string niveau
        string specialite
        number duree_mois
    }
    FORMATION ||--|{ APPRENANT : "FORME"
    APPRENANT ||--o{ STAGE : "EFFECTUE"
    APPRENANT ||--o{ CANDIDATURE : "SOUMET"
    ENTREPRISE ||--o{ OFFRE_STAGE : "PROPOSE"
    OFFRE_STAGE ||--o{ CANDIDATURE : "RECOIT"
    STAGE ||--|| OFFRE_STAGE : "CORRESPOND_A"
    TUTEUR_PEDAGOGIQUE ||--o{ STAGE : "SUPERVISE"
    TUTEUR_ENTREPRISE ||--o| STAGE : "ENCADRE"
    ENTREPRISE ||--o{ TUTEUR_ENTREPRISE : "EMPLOIE"
